--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>People entered:</h1>
-    <h2 id="count-el">0</h2>
-    <button id="increment-btn" onClick="increment()">INCREMENT</button>
-    <button id="save-btn" onClick="save()">SAVE</button>
-    <p id="save-el">Previous entries:</p>
+    <div class="container">
+      <h1>People entered:</h1>
+      <h2 id="count-el">0</h2>
+      <button id="increment-btn" onClick="increment()">INCREMENT</button>
+      <button id="save-btn" onClick="save()">SAVE</button>
+      <p id="save-el">Previous entries:</p>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
